src/components/Layout/Layout.module.scss
@import "../../styles/variables";

.layout {
  padding-bottom: 3rem;
  display: flex;
  overflow-y: scroll;

  @media screen and (min-width: $breakpoint-desktop) {
    padding-bottom: 0;
    height: 100vh;
  }

  .pageWrapper {
    width: 100%;

    @media screen and (min-width: $breakpoint-desktop) {
      .childrenContainer {
        max-width: 720px;
        margin: 0 auto;
        padding-left: 280px;
      }
    }
  }
}

.dark {
  background-color: $gray-900;
}

